2005-10-12  Richard Guenther  <rguenther@suse.de>

PR c++/23799
	* varasm.c (output_constant): Correct typo from previous
	patch by DJ.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105290 138bc75d-0d04-0410-961f-82ee72b054a4